deploy: 5604e536c99ae7a916a91533f200a180f47cae2b

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="/wedding-for-you/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Tạo thiệp cưới online chỉ với 3 bước đơn giản. Dễ dàng, nhanh chóng, cá nhân hóa – Wedding4U đồng hành cùng ngày trọng đại của bạn.">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>Wedding4u.online</title>
+  <title>wedding4u.online - Thiệp cưới online</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
